# Personal-Projects

dispensador_gatos/BitDogLab-ServorSG90/: CMakeLists.txt  LICENSE.txt  README.md
wargreymon/: README.md
wargreymon/eez_studio_test_landscape/: test_landscape.eez-project  test_landscape.eez-project-ui-state
wargreymon/st7789_pio_lcd_lvgl/: README.md  (+4 more)
wargreymon/st7789_pio_lcd_lvgl/ui/: CMakeLists.txt  actions.h  fonts.h  images.c  images.h  screens.c  screens.h  styles.h  ui.h  ui_image_embarcatech.c  ui_image_frame_00_delay_0_1s_ezgif_com_gif_to_apng_converter.c  ui_image_frame_01_delay_0_1s_ezgif_com_gif_to_apng_converter.c  ui_image_frame_02_delay_0_1s_ezgif_com_gif_to_apng_converter.c  ui_image_frame_03_delay_0_1s_ezgif_com_gif_to_apng_converter.c  ui_image_frame_04_delay_0_1s_ezgif_com_gif_to_apng_converter.c  ui_image_frame_05_delay_0_1s_ezgif_com_gif_to_apng_converter.c  ui_image_frame_06_delay_0_1s_ezgif_com_gif_to_apng_converter.c  ui_image_frame_07_delay_0_1s_ezgif_com_gif_to_apng_converter.c  ui_image_frame_08_delay_0_1s_ezgif_com_gif_to_apng_converter.c  ui_image_frame_09_delay_0_1s_ezgif_com_gif_to_apng_converter.c  ui_image_frame_10_delay_0_1s_ezgif_com_gif_to_apng_converter.c  ui_image_frame_11_delay_0_1s_ezgif_com_gif_to_apng_converter.c  ui_image_frame_12_delay_0_1s_ezgif_com_gif_to_apng_converter.c  ui_image_frame_13_delay_0_1s_ezgif_com_gif_to_apng_converter.c  ui_image_frame_14_delay_0_1s_ezgif_com_gif_to_apng_converter.c  ui_image_frame_15_delay_0_1s_ezgif_com_gif_to_apng_converter.c  ui_image_frame_16_delay_0_1s_ezgif_com_gif_to_apng_converter.c
(+14 files in other folders)
