SET(SOURCES images.c
    screens.c
    styles.c
    ui_image_embarcatech.c
    ui.c
    ui_image_frame_00_delay_0_1s_ezgif_com_gif_to_apng_converter.c
    ui_image_frame_01_delay_0_1s_ezgif_com_gif_to_apng_converter.c
    ui_image_frame_02_delay_0_1s_ezgif_com_gif_to_apng_converter.c
    ui_image_frame_03_delay_0_1s_ezgif_com_gif_to_apng_converter.c
    ui_image_frame_04_delay_0_1s_ezgif_com_gif_to_apng_converter.c
    ui_image_frame_05_delay_0_1s_ezgif_com_gif_to_apng_converter.c
    ui_image_frame_06_delay_0_1s_ezgif_com_gif_to_apng_converter.c
    ui_image_frame_07_delay_0_1s_ezgif_com_gif_to_apng_converter.c
    ui_image_frame_08_delay_0_1s_ezgif_com_gif_to_apng_converter.c
    ui_image_frame_09_delay_0_1s_ezgif_com_gif_to_apng_converter.c
    ui_image_frame_10_delay_0_1s_ezgif_com_gif_to_apng_converter.c
    ui_image_frame_11_delay_0_1s_ezgif_com_gif_to_apng_converter.c
    ui_image_frame_12_delay_0_1s_ezgif_com_gif_to_apng_converter.c
    ui_image_frame_13_delay_0_1s_ezgif_com_gif_to_apng_converter.c
    ui_image_frame_14_delay_0_1s_ezgif_com_gif_to_apng_converter.c
    ui_image_frame_15_delay_0_1s_ezgif_com_gif_to_apng_converter.c
    ui_image_frame_16_delay_0_1s_ezgif_com_gif_to_apng_converter.c    

    )
    
add_library(ui ${SOURCES})
